syntax = "proto3";
package bookpackage;

service BookService {
  rpc List (Empty) returns (BookList) {}
  rpc Insert (Book) returns (Empty) {}
  // add the following line
  rpc Get (BookIdRequest) returns (Book) {}
  // add the watch method definition
  rpc Watch (Book) returns (stream Book) {}
}

message Empty {}

message Book {
  int32 id = 1;
  string title = 2;
  string author = 3;
}

message BookList {
  repeated Book books = 1;
}

// add the message definition below
message BookIdRequest {
  int32 id = 1;
}